Added table completion support in forms